Bug 153088 - Dark Mode: Format > Font + Font Effects preview text should be white when document background dark
Summary: Dark Mode: Format > Font + Font Effects preview text should be white when doc...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords:
: 153656 (view as bug list)
Depends on:
Blocks: LibreOffice-Themes Dark-Mode
  Show dependency treegraph
 
Reported: 2023-01-18 11:21 UTC by steve
Modified: 2023-02-17 10:16 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
2023-01-18 main build (75.81 KB, image/png)
2023-01-18 11:21 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2023-01-18 11:21:15 UTC
Description:
Sample Text in Calc: Format Cells > Font + Font Effects is black instead of white when using dark mode.

Steps to Reproduce:
Open Calc: Format Cells > Font and Font Effects

Actual Results:
Black sample text

Expected Results:
White sample text


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ef558d0aab44421ad5cd8362724ff1410af1b480
CPU threads: 8; OS: Mac OS X 13.1; UI render: Skia/Raster; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 steve 2023-01-18 11:21:43 UTC
Created attachment 184743 [details]
2023-01-18 main build
Comment 2 Rafael Lima 2023-01-18 12:19:50 UTC
I confirm this with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4631a1cc2a59bd580ce9a39cefbb5bd589b6eb5f
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded

Weirdly I don't get the problem with LO 7.4.4 using the "LibreOffice" color scheme but the issue appears with the "LibreOffice Dark" scheme.

Version: 7.4.4.2 / LibreOffice Community
Build ID: 40(Build:2)
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 1:7.4.4-0ubuntu0.22.10.1
Calc: threaded
Comment 3 Rafael Lima 2023-01-18 12:29:40 UTC
BTW this is not only macOS related, but affects all platforms.
Comment 4 Rafael Lima 2023-01-18 14:04:53 UTC
@Steve, as soon as you open the dialog, the colors are dark over dark as you reported. But as soon as you click anything in the dialog, it will update to using the correct colors (DOCCOLOR and FONTCOLOR).

The problem seems to be just when the dialog is first shown. Can you confirm that?
Comment 5 steve 2023-01-18 15:56:18 UTC
Thanks for confirming the bug. On macOS 13.1 clicking into the dialog or interacting with it does not change color of sample text.
Comment 6 Commit Notification 2023-01-18 23:25:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf734427550f1a42f8ac669378719a1cad617bbb

tdf#153088 format cells example text black on dark background

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2023-01-19 09:00:45 UTC
should be good in trunk now, backport to 7-5 in gerrit
Comment 8 Commit Notification 2023-01-19 09:52:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/fa62e63d6b75aac80dd23520351de11c5a0c9ea4

tdf#153088 format cells example text black on dark background

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 steve 2023-01-25 13:01:41 UTC
verified, thanks so much for your work fine tuning dark mode Caolán.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e125e6623fa1c0f39d927bb37547ca6d1e299cb1
CPU threads: 8; OS: Mac OS X 13.2; UI render: Skia/Raster; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 10 stragu 2023-02-17 10:14:00 UTC
*** Bug 153656 has been marked as a duplicate of this bug. ***