tdf#153088 format cells example text black on dark background

with application colors, scheme: LibreOffice Dark enabled

Change-Id: I465c97bf21b66c0122b59296d0c114bf115910ae
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145726
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>